[gd_scene load_steps=7 format=2]

[ext_resource path="res://bobomb.gd" type="Script" id=1]
[ext_resource path="res://art/bomb1N.png" type="Texture" id=2]
[ext_resource path="res://art/explOS.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 27.3764

[sub_resource type="Animation" id=2]
resource_name = "waitingToEx"
length = 3.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 27.3677

[node name="bobomb" type="RigidBody2D"]
collision_layer = 2
gravity_scale = 0.0
can_sleep = false
script = ExtResource( 1 )

[node name="exploPic" type="Sprite" parent="."]
position = Vector2( 1.41336, -2.8707 )
scale = Vector2( 0.296304, 0.305213 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.999985, -11.5281 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/waitingToEx = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.0561218, -6.49489 )
shape = SubResource( 3 )

[node name="waitingToExplode" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="explode" type="Timer" parent="."]
wait_time = 2.0

[node name="timeLabel" type="Label" parent="."]
modulate = Color( 0.686275, 0.227451, 0.227451, 1 )
margin_left = -4.0
margin_top = -13.0
margin_right = 7.0
margin_bottom = 1.0
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exploLabTimer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="ready" from="waitingToExplode" to="." method="_on_waitingToExplode_ready"]
[connection signal="timeout" from="waitingToExplode" to="." method="_on_waitingToExplode_timeout"]
[connection signal="timeout" from="explode" to="." method="_on_explode_timeout"]
[connection signal="timeout" from="exploLabTimer" to="." method="_on_exploLabTimer_timeout"]
